# word-machine

./: .env.examples  .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: database.rs  handlers.rs  language.rs  main.rs  utils.rs  word.rs
src/data/: database.rs  handlers.rs  main.rs
src/fetching/: client.rs  fetching.rs  handlers.rs  main.rs  parse.rs
src/lib/: language.rs  mod.rs  reqwest.rs
translate-app/: package-lock.json  package.json
translate-app/src/: App.js
web/: package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.js  App.scss  SearchView.js  Word.scss  WordListView.js  WordView.js  _theme.scss  index.scss
web/src/components/: DisplayWord.js  SearchWord.js  Word.js
