[package]
name = "word-machine"
version = "0.1.0"
authors = ["youngtrashbag"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# database
sled = "0.34"

# logging
log = "0.4"
env_logger = "0.8"

# environment variables
dotenv = "0.15"
