[package]
name = "word-machine"
version = "0.1.0"
authors = ["youngtrashbag"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server
actix-web = "3.3"
actix-cors = "0.5"

# serialisation
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"

# database
sled = "0.34"

# logging
log = "0.4"
env_logger = "0.8"

# environment variables
dotenv = "0.15"
