[package]
name = "word-machine"
version = "0.1.0"
authors = ["youngtrashbag"]
edition = "2018"
license = "MIT"

[[bin]]
name = "data-layer"
description = "REST API, takes requests from frontend, also works with database"
path = "src/data/main.rs"

[[bin]]
name = "information-fetching"
description = "REST API, takes requests from data-layer, fetches information from various API's"
path = "src/fetching/main.rs"

[lib]
name = "lib"
path = "src/lib/mod.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# server
actix-web = "3.3"
actix-cors = "0.5"

# http requests
reqwest = { version = "0.11", features = ["blocking", "socks", "json"] }

# serialisation
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"

# database
sled = "0.34"

# logging
log = "0.4"
env_logger = "0.8"

# environment variables
dotenv = "0.15"
